trigger for lodgement_history
