# aua-app/src/_assets/api.yml
@@ -268,7 +268,7 @@ paths:
       #   - authLoggedInUser: []
       responses:
         200:
-          description: OK          
+          description: OK
   /lodgement/generate:
     post:
       operationId: generateLodgement
@@ -317,7 +317,7 @@ paths:
           required: true
       responses:
         200:
-          description: OK           
+          description: OK
   /lodgement/{id}/assign:
     post:
       operationId: assignLodgement
@@ -331,7 +331,7 @@ paths:
           required: true
       responses:
         200:
-          description: OK      
+          description: OK
   /lodgement/{id}/message:
     get:
       operationId: listLodgementMessage
@@ -358,7 +358,7 @@ paths:
           required: true
       responses:
         200:
-          description: OK 
+          description: OK
   /lodgement/{id}/complete:
     post:
       operationId: completeLodgement
@@ -366,25 +366,6 @@ paths:
       #   - authClient: []
       parameters:
         - name: id
-          in: path
-          type: string
-          format: uuid
-          required: true
-      responses:
-        200:
-          description: OK                
-  /lodgement/{id}/log/{event}:
-    post:
-      operationId: logLodgmentEvent
-      # security:
-      #   - authClient: []
-      parameters:
-        - name: id
-          in: path
-          type: string
-          format: uuid
-          required: true
-        - name: event
           in: path
           type: string
           format: uuid
